--- a/desafios-guanabara/mini-projeto2/index.html
+++ b/desafios-guanabara/mini-projeto2/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <header>
-        Cordel Moderno
-        Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank">Milton Duarte</a>
-        [SITE: https://www.recantodasletras.com.br/poesias/3186743]
+        <h1>Cordel Moderno</h1>
+        <p>Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank">Milton Duarte</a></p>
+        
     </header>
 
     <section class="normal">
